# autoresearch-trading

./: .context-sync-claims.json  .cursorignore  .cursorrules  .dockerignore  .env.example  .envrc.arm64  .gitignore  =16.0.0  AGENTS.md  CI_FIX_SUMMARY.md  CLAUDE.md  Dockerfile  Dockerfile.arm64  Dockerfile.cloud  Makefile  Makefile.local  README.md  TESTING_SYNC.md  collect_all_symbols.py  collect_all_symbols_cloud.py  collect_data.py  diagnose_features.py  docker-compose.yml  find_breakeven.py  fly.toml  mypy.ini  permutation_importance.py  prepare.py  program.md  pyproject.toml  railway.toml  render.yaml  requirements.txt  results.tsv  setup-arm64.sh  symbols.json  symbols.txt  train.py  validate_alpha.py
.claude/: README.md
autoresearch-trading/: prepare.py  program.md  train.py
config/: __init__.py  api.py  deployment.py  settings.py  signals.py  storage.py  trading.py
signal-engine/: .env.bak  .env.bak2  .env.broken  .env.example  Dockerfile  Dockerfile.arm64  MULTI_SYMBOL_TEST_REPORT.md  PAPER_TRADING_TEST_REPORT.md  REALTIME_TRADING_TEST_RESULTS.md  pyproject.toml  pytest.ini  requirements.txt  test_dotenv.py  test_settings.py
signal-engine/reports/2025-10-18/: multi-symbol-test-report.md  paper-trading-test-report.md
signal-engine/scripts/: monitor_paper_trading.py  run_backtest.py  run_backtest_parquet.py  run_paper_trading.py  run_realtime_trading.py  run_signal_pipeline.py  setup_questdb.py  setup_questdb_local.py  test_signals_manual.py
signal-engine/src/api/: live_data.py
signal-engine/src/backtest/: __init__.py  engine.py  metrics.py  position_manager.py  reporter.py  strategy.py
signal-engine/src/config/: settings.py
signal-engine/src/db/: questdb.py  schema.sql
signal-engine/src/live/: __init__.py  stream_client.py
signal-engine/src/paper_trading/: __init__.py  engine.py  models.py  position_tracker.py  realtime_engine.py  risk_manager.py  trade_executor.py
signal-engine/src/persistence/: __init__.py  async_writer.py
signal-engine/src/regime/: detectors.py
signal-engine/src/signal_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
signal-engine/src/signals/: __init__.py  base.py  cvd.py  ofi.py  tfi.py
signal-engine/src/stream/: __init__.py  dataflow.py  live_sources.py  realtime_dataflow.py  signal_router.py  sources.py
signal-engine/tests/: __init__.py  conftest.py
signal-engine/tests/fixtures/: sample_data.py
signal-engine/tests/integration/: test_dataflow.py
signal-engine/tests/unit/: test_cvd.py  test_regime.py  test_tfi.py
signal-engine/tests/unit/paper_trading/: test_engine.py  test_position_tracker.py  test_realtime_engine.py  test_risk_manager.py  test_trade_executor.py
signal-engine/tests/unit/stream/: test_signal_router.py
(+819 files in other folders)
