[project]
name = "autoresearch-trading"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "gymnasium>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=1.5.0",
    "optuna>=4.7.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]

[tool.setuptools]
py-modules = ["prepare", "train"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
