# Minimal pyproject to support editable installs during development
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-engine"
version = "0.1.0"
description = "Symbolic signal engine for Pacifica neurosymbolic trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "bytewax>=0.20.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "TA-Lib>=0.4.28",
    "scipy>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "questdb>=1.1.0",
    "hftbacktest>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "plotly>=5.22.0",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
